# greffer

./: .dockerignore  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Dockerfile.updater  Dockerfile.updater.dockerignore  LICENSE  README.md  SECURITY.md  docker-compose.yml  env.env  manage.py  nginx.conf  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflow/: docker-publish.yml
.github/workflows/: ci.yml  cli-release.yml  docker-publish.yml  udp-soak.yml
app/: __init__.py  auth.py  backup.py  cli.py  diagnostics.py  errors.py  lifespan.py  log_context.py  logging.py  main.py  middleware.py  readiness.py  settings.py  token.py  tunnel_config.py
app/models/: controller.py
app/routers/: controller.py  health.py
app/workers/: __init__.py  crl.py  heartbeat.py  monitor.py  register.py  status_collect.py  watchdog.py
apps/: urls.py
apps/controller/: serializer.py  tasks.py  tests.py  tests_views.py  urls.py  views.py
apps/controller/management/commands/: apply_ops_migrations.py
apps/utils/: auth.py  tests_auth.py
apps/utils/docker/: base.py  compose.py  exec_op.py  instance_logs.py  l4_ports.py  observe.py  tests_compose.py  tests_compose_template.py  tests_volume_migration.py  updater.py  volume.py  volume_migration.py
apps/utils/greffon/: base_server.py  monitoring.py  repository.py  sticky_ports.py  tests_base_server.py  tests_monitoring.py  tests_repository.py
apps/utils/nginx/: conf.py
apps/utils/nginx/template/: nginx.conf.jinja
apps/utils/ops_migrations/: base.py  ledger.py  operations.py  registry.py  runner.py
apps/utils/ops_migrations/migrations/: _0001_namespace_catalog_volumes.py  __init__.py
apps/utils/ops_migrations/tests/: tests_0001_namespace_catalog_volumes.py  tests_ledger.py  tests_registry.py  tests_runner.py
apps/utils/os/: network.py
cli/: README.md  greffer.spec  greffer_launcher.py  pyproject.toml
cli/greffer_cli/: __init__.py  compose.py  doctor.py  env_file.py  install_deps.py  main.py  manager_client.py  paths.py  status.py  strings.py  up.py  update.py
cli/greffer_cli/templates/: __init__.py  compose.proxy.yml  compose.yml
cli/greffer_cli/updater/: __init__.py  __main__.py  engine.py  floor.py  gate.py  provenance.py  recreate.py
cli/tests/: test_compose.py  test_doctor.py  test_env_file.py  test_install_deps.py  test_main.py  test_manager_client.py  test_paths.py  test_state_machine.py  test_status.py  test_up.py  test_update.py  test_updater_engine.py  test_updater_gate.py  test_updater_main.py  test_updater_provenance.py  test_updater_provenance_floor.py  test_updater_recreate.py
cli/tests/integration/: __init__.py  conftest.py  test_up_smoke.py
docs/: release-signing.md
greffer/: asgi.py  settings.py  urls.py  wsgi.py
loadtest/tunnel-udp-soak/: README.md  client.toml  compare_soak.py  docker-compose.soak.yml  run-soak.sh  server.toml  udp_echo.py  udp_soak.py
nginx/: Dockerfile  nginx.sh
rathole-server/: Dockerfile  entrypoint.sh
tests/: conftest.py  helpers.py  test_auth.py  test_backup_destination.py  test_backup_retention.py  test_baked_config_files.py  test_cli.py  test_compose.py  test_controller_backup.py  test_controller_decommission.py  test_controller_errors.py  test_controller_logs.py  test_controller_models.py  test_controller_pull.py  test_controller_routes.py  test_controller_update.py  test_db_restore.py  test_decommission_helpers.py  test_diagnostics.py  test_dump_backup.py  test_exec_op.py  test_healthz.py  test_hot_backup.py  test_instance_logs.py  test_integrations_feat4.py  test_l4_network_exposure.py  test_l4_same_port.py  test_lifespan.py  test_log_context.py  test_log_rotation.py  test_logging.py  test_middleware.py  test_nginx_conf.py  test_observe.py  test_ops_migrations_0001_namespace_catalog_volumes.py  test_ops_migrations_ledger.py  test_ops_migrations_registry.py  test_ops_migrations_runner.py  test_per_instance_repo.py  test_readiness.py  (+16 more)
tunnel-sidecar/: Dockerfile  agent.py  entrypoint.sh
tunnel-sidecar/tests/: conftest.py  test_agent.py
