[tool.poetry]
name = "greffer"
version = "0.1.0"
description = ""
authors = ["Greffon <admin@greffon.io>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.11"
Django = "~3.2"
djangorestframework = "^3.13.1"
django-q = "^1.3.9"
Jinja2 = "^3.0.3"
requests = "^2.26.0"
python-datauri = "^1.1.0"
docker = "^5.0.3"
pyyaml = "^6.0.1"
fastapi = "^0.110"
uvicorn = {extras = ["standard"], version = "^0.29"}
pydantic = "^2.6"
pydantic-settings = "^2.2"

[tool.poetry.group.dev.dependencies]
factory-boy = "^3.2"
pytest = "^8.0"
pytest-asyncio = "^0.23"
httpx = "^0.27"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
