[tool.poetry]
name = "greffer"
version = "0.1.0"
description = ""
authors = ["Greffon <admin@greffon.io>"]
license = "MIT"
# This repo is an application (FastAPI service), not a distributable
# library. Prior to cutover, the ``greffer`` Django project module was
# the implicit "package" poetry looked for; now that Django is gone,
# there's no top-level module matching the project name. Turning off
# package mode tells poetry to manage dependencies only.
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
Jinja2 = "^3.0.3"
# Pinned to the 2.26 line because docker SDK 5.0.3 + urllib3 v1 assume
# the older ``requests`` HTTP-adapter behavior. Newer requests (2.30+)
# require urllib3 v2 which rejects the ``http+docker://`` scheme the
# docker SDK uses. Drop these pins when docker SDK is upgraded to ^7.0
# (out of scope for this epic).
requests = "~2.26"
urllib3 = "<2"
python-datauri = "^1.1.0"
docker = "^5.0.3"
pyyaml = "^6.0.1"
fastapi = "^0.110"
uvicorn = {extras = ["standard"], version = "^0.29"}
pydantic = "^2.6"
pydantic-settings = "^2.2"

[tool.poetry.group.dev.dependencies]
factory-boy = "^3.2"
pytest = "^8.0"
pytest-asyncio = "^0.23"
httpx = "^0.27"
# docker SDK 5.0.3 uses `distutils`, removed from stdlib in Python 3.12.
# The production container runs Python 3.11 (distutils still stdlib) so
# the production image does not need this workaround. Local dev on Python
# 3.12+ does. Removable entirely once docker SDK is upgraded to ^7.0
# (out of scope for this epic).
setuptools = "<70"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
