[tool.poetry]
name = "greffer-cli"
version = "0.1.0"
description = "Operator CLI for installing and managing a greffer."
authors = ["Greffon <admin@greffon.io>"]
readme = "README.md"
packages = [{ include = "greffer_cli" }]

[tool.poetry.dependencies]
python = "^3.11"
typer = "^0.12"
# Pin click to <8.2 — click 8.4 has incompatible option-parsing behavior
# with typer 0.12 (treats `--option <value>` as a boolean flag and
# rejects the value with "Option '--foo' does not take a value").
# Lift this constraint when typer ships a click-8.4-compatible release.
click = ">=8.1,<8.2"
httpx = "^0.27"
rich = "^13"

[tool.poetry.group.dev.dependencies]
pytest = "^8"
pytest-mock = "^3"

[tool.poetry.scripts]
greffer = "greffer_cli.main:app"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
