[tool.poetry]
name = "greffer-cli"
version = "0.1.0"
description = "Operator CLI for installing and managing a greffer."
authors = ["Greffon <admin@greffon.io>"]
readme = "README.md"
packages = [{ include = "greffer_cli" }]
# Non-Python files that must ship inside the wheel/sdist. Poetry
# includes resources by default IF they sit inside the package, but
# being explicit guards against future regressions:
#  - templates/compose.yml: the rendered docker-compose source.
#  - IMAGE_TAG: pinned image tag interpolated into the template at
#    `greffer up` time. The file used to live at cli/IMAGE_TAG (one
#    level up from the package) and was silently dropped from built
#    wheels — operators rendered image refs like greffon/greffer:main
#    against a registry that only publishes `latest`.
include = [
    { path = "greffer_cli/templates/*.yml", format = ["sdist", "wheel"] },
    { path = "greffer_cli/IMAGE_TAG", format = ["sdist", "wheel"] },
]

[tool.poetry.dependencies]
python = "^3.11"
typer = "^0.12"
# Pin click to <8.2 — click 8.4 has incompatible option-parsing behavior
# with typer 0.12 (treats `--option <value>` as a boolean flag and
# rejects the value with "Option '--foo' does not take a value").
# Lift this constraint when typer ships a click-8.4-compatible release.
click = ">=8.1,<8.2"
httpx = "^0.27"
rich = "^13"

[tool.poetry.group.dev.dependencies]
pytest = "^8"
pytest-mock = "^3"

[tool.poetry.group.release]
# Mark the group `optional` so plain `poetry install` SKIPS it.
# Without this, Poetry treats it as a default group and pulls
# pyinstaller into every contributor's venv — defeating the point of
# the comment in the dependencies table below.
optional = true

[tool.poetry.group.release.dependencies]
# Installed only on the CI release runner via `poetry install --with release`,
# not in dev or test environments. Keeps `poetry install` lean for contributors.
# pyinstaller 6.x only supports python <3.14; we scope the marker so
# `poetry lock` doesn't reject the whole solver tree on Python 3.14+.
# Lift the upper bound when pyinstaller publishes 3.14 support.
pyinstaller = { version = "^6.5", python = ">=3.11,<3.14" }

[tool.poetry.scripts]
greffer = "greffer_cli.main:app"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
